--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/web-n/Nodejs#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "mysql": "^2.18.1",
     "sanitize-html": "^1.18.2"
   }
 }
