--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "dotenv": "^16.0.3",
     "mysql": "^2.18.1",
     "sanitize-html": "^1.18.2"
+  },
+  "devDependencies": {
+    "prettier": "2.8.7"
   }
 }
